tests/NormalTests/paczka2/big_fuzzy/18712678.err
Error in line 1: k4IaA6 S41 24,01
Error in line 3: k4IaA6 S41 79,8
Error in line 8: k4IaA6 A463 76,4
Error in line 2: yBmw S82 668,1
Error in line 11: k4IaA6 S427 2,9
Error in line 16: yBmw S41 10,5
Error in line 35: dIsr S41 96,7
Error in line 33: A463 S427 184,5
Error in line 37: k4IaA6 S82 5,9
Error in line 43: x3MuXGOn2 S41 13,3
Error in line 40: k4IaA6 S427 8,9
Error in line 53: A463 S427 88,3
Error in line 78: APxF3C S427 40,2
Error in line 85: mpdX S41 87,6
Error in line 87: mpdX S82 14,8
Error in line 84: yBmw S41 20,0
Error in line 90: yBmw A463 24,8
Error in line 101: yBmw S82 42,7
Error in line 106: APxF3C S427 99,8
Error in line 117: A463 S427 5,12
Error in line 108: A463 A463 65,0
Error in line 118: yBmw A463 3,9
Error in line 116: dIsr S82 27,4
Error in line 122: yBmw S82 80,3
Error in line 135: x3MuXGOn2 A463 63,8
Error in line 134: mpdX S427 27,6
Error in line 121: k4IaA6 S427 482,0
Error in line 147: yBmw A463 84,8
Error in line 153: mpdX S427 90,95
Error in line 144: x3MuXGOn2 S427 87,1
Error in line 150: yBmw S82 27,1
Error in line 146: APxF3C S82 71,0
Error in line 172: APxF3C S41 45,4
Error in line 175: k4IaA6 S82 11,7
Error in line 177: k4IaA6 S41 43,3
Error in line 178: k4IaA6 S427 90,1
Error in line 182: mpdX A463 93,3
Error in line 183: mpdX S427 36,0
Error in line 195: k4IaA6 S41 64,1
Error in line 193: x3MuXGOn2 S41 21,0
Error in line 197: APxF3C S82 40,0
Error in line 200: APxF3C A463 39,2
Error in line 203: APxF3C S41 21,7
Error in line 207: APxF3C S427 10,4
Error in line 215: A463 S41 9,3
Error in line 217: A463 S427 64,7
Error in line 221: mpdX S82 16,9
Error in line 208: x3MuXGOn2 S427 6,7
Error in line 227: mpdX S427 63,0
Error in line 244: dIsr A463 25,8
Error in line 245: A463 S427 1,6
Error in line 247: A463 A463 21,6
Error in line 243: mpdX A463 235,0
